--- a/shopping-list.html
+++ b/shopping-list.html
@@ -4,17 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shopping list example</title>
-    <style>
-      li {
-        margin-bottom: 10px;
-      }
-
-      li button {
-        font-size: 8px;
-        margin-left: 20px;
-        color: #666;
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
 
@@ -23,15 +13,13 @@
     <div>
       <label for="item">Enter a new item:</label>
       <input type="text" name="item" id="item">
-      <button>Add item</button>
+      <button type="button" onclick="addItem()">Add item</button>
     </div>
 
     <ul>
 
     </ul>
 
-    <script>
-
-    </script>
+    <script src="./script.js"></script>
   </body>
 </html>
